# QHive

./: .gitignore  CMakeLists.txt  README.md
resources/: resource.qrc
src/: main.cpp
src/core/: DownloadWorker.cpp  DownloadWorker.h  MultiThreadDownloader.cpp  MultiThreadDownloader.h  SingleThreadDownloader.cpp  SingleThreadDownloader.h
src/database/: DatabaseManager.cpp  DatabaseManager.h  TaskRepository.cpp  TaskRepository.h
src/network/: HeadRequestTask.cpp  HeadRequestTask.h  HttpClient.cpp  HttpClient.h
src/ui/: DownloadDialog.cpp  DownloadDialog.h  DownloadDialog.ui  DownloadTaskItemWidget.cpp  DownloadTaskItemWidget.h  DownloadTaskItemWidget.ui  QHive.cpp  QHive.h  QHive.ui
